--- a/react_portfolio/public/index.html
+++ b/react_portfolio/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+            
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,4 +39,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <footer>
+    
+  </footer>
 </html>
